--- a/src/index.css
+++ b/src/index.css
@@ -274,6 +274,21 @@ footer i {
   cursor: pointer;
 }
 
+.loading {
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(255, 255, 255, 0.3);
+}
+.loading p {
+  font-size: 1.5rem;
+  font-family: Gilroy;
+  font-weight: 600;
+}
+
 /* for Mobile screens */
 @media (max-width: 767px) {
   .nav {
